Refactored CSS folder with the 7-1 pattern

--- a/app/src/assets/css/index.scss
+++ b/app/src/assets/css/index.scss
@@ -1,700 +1,14 @@
-$dark-blue: #212738;
-$pd-blue: #3b4560;
-$light-blue: #9BE7FF;
-$light-grey: #F0F3F5;
-$orange: #FF8811;
-$viewport-top-margin: 10%;
-$padding-20: 20px;
-
-@import "loader", "responsive";
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400&display=swap');
-
-@media all and (min-width: 480px) {
-  h2 {
-    font-size: 1.5rem;
-  }
-
-  header nav ul svg {
-    height: 25px;
-    width: 25px;
-  }
-
-  .informations .shop-stats {
-    thead th {
-      font-size: .75rem;
-    }
-    td {
-      font-size: 1rem;
-    }
-  }
-
-  .appointment p, .manage-stock p {
-    font-size: 1rem;
-  }
-
-  .manage-stock {
-    gap: 20px;
-
-    .stock-stats {
-      gap: 10px 0;
-    }
-
-    .display-stock-state {
-      gap: 10px;
-    }
-  }
-
-  .booked table {
-    th {
-      font-size: 1.2rem;
-    }
-    td {
-      font-size: 1rem;
-    }
-  }
-}
-
-@media all and (min-width: 768px) {
-
-  #root {
-    flex-direction: row;
-  }
-
-  h2 {
-    font-size: 2rem;
-  }
-
-  p {
-    font-size: 1rem;
-  }
-
-  header {
-    background-color: $dark-blue;
-    height: 100vh;
-    width: 100%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-
-    .user-info {
-      display: flex;
-      gap: 20px;
-      height: 90px;
-
-      .mobile-user-bg {
-        padding: 0 5px 0 5px;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        background-color: $light-grey;
-        border-radius: 0 10vh 10vh 0;
-        width: min-content;
-      }
-
-      svg {
-        height: 9vh;
-        width: 9vh;
-        color: black;
-      }
-
-      .display-user {
-        display: none;
-      }
-    }
-
-    nav {
-      flex: 1;
-      width: 100%;
-
-      ul {
-        height: 100%;
-        padding: 0;
-        margin: 0;
-        list-style-type: none;
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(7, 1fr);
-        align-items: center;
-        justify-items: center;
-      }
-    }
-  }
-
-
-  .main {
-    height: 100vh;
-    width: 80.416666666666666666666666666667%;
-  }
-
-  .dashboard, .search-result {
-    height: 67.685185185185185185185185185185%;
-    gap: 20px;
-  }
-
-  .dashboard, .informations, .search-result, .appointment, .manage-stock, .booked {
-    display: flex;
-    flex-direction: row;
-    padding: $padding-20;
-  }
-
-  .informations, .appointment, .booked, .manage-stock {
-    border-radius: 10px;
-    background-color: white;
-  }
-
-  .atelier, .search-section {
-    height: 32.314814814814814814814814814815%;
-    width: 100%;
-    background-color: $light-blue;
-    padding: 1.9% 40px 20px 40px;
-  }
-  .atelier, .search-section, .informations {
-    h2 {
-      height: 20%;
-    }
-
-    .workshop, .input-container {
-      width: 100%;
-      height: 80%;
-    }
-  }
-
-  .search-result, .booked, .atelier {
-    table {
-      width: 100%;
-      height: max-content;
-      max-height: 100%;
-      border-collapse: collapse;
-      background-color: white;
-      border-radius: 10px;
-    }
-
-    tr {
-      border: none;
-      height: 50px;
-    }
-
-    th, td {
-      border-right: solid 1px $light-grey;
-      text-align: left;
-    }
-
-    th:last-child, td:last-child {
-      border-right: none;
-    }
-
-    td {
-      width: max-content;
-      font-size: 1rem;
-    }
-  }
-
-  .atelier, .display-user, .tiles-container {
-    display: block;
-  }
-
-  .atelier {
-    .table-container {
-      display: flex;
-      flex-direction: column;
-      width: max-content;
-      height: 100%;
-      justify-content: space-between;
-    }
-
-    button {
-      cursor: pointer;
-      background-color: #88e2fd;
-      border: 1px solid #6db1ff;
-      font-size: 1rem;
-      font-family: Inter, sans-serif;
-      padding: 3px 20px;
-      border-radius: 15px;
-      width: max-content;
-    }
-
-    button:hover {
-      background-color: #88ccfd;
-    }
-
-    .workshop {
-      display: flex;
-      justify-content: space-between;
-    }
-
-    table {
-      background-color: transparent;
-
-      tr {
-        height: 40px;
-
-        th, td {
-          border-right: solid 1px white;
-          font-family: Inter, sans-serif;
-          font-weight: normal;
-        }
-
-        th {
-          font-size: 1.5rem;
-          text-align: left;
-          border: none;
-        }
-
-        td:last-child {
-          padding-left: 20px;
-        }
-
-        td:first-child {
-          padding-right: 20px;
-        }
-      }
-    }
-  }
-
-  .subcontainer, .container {
-    display: flex;
-    width: max-content;
-    height: auto;
-    gap: 20px;
-  }
-
-  .container {
-    flex-direction: column;
-  }
-
-  .informations, .manage-stock {
-    width: 610px;
-    height: 287px;
-  }
-
-  .informations {
-    p {
-      font-size: 1.25rem;
-    }
-
-    .display-informations {
-      height: 100%;
-      width: 40%;
-      display: flex;
-      flex-direction: column;
-      gap: 2%;
-    }
-
-    .today-chart {
-      width: 80%;
-      height: 80%;
-      display: flex;
-      align-items: flex-end;
-    }
-
-    .shop-stats {
-      height: 100%;
-      width: 60%;
-      border-collapse: separate;
-      border-spacing: 0 15px;
-
-      thead th {
-        font-size: 1rem;
-        font-family: Inter, sans-serif;
-        font-weight: normal;
-        text-align: center;
-      }
-
-      td {
-        font-size: 1.5rem;
-        font-family: Inter, sans-serif;
-        font-weight: normal;
-        text-align: center;
-      }
-
-      td:first-child {
-        padding-right: 7%;
-        text-align: right;
-      }
-
-      td:nth-child(2) {
-        background-color: $light-grey;
-        border-radius: 10px 0 0 10px;
-        width: 25%;
-      }
-
-      td:last-child {
-        background-color: $light-grey;
-        border-radius: 0 10px 10px 0;
-        width: 25%;
-      }
-    }
-  }
-
-  .tiles-container {
-    height: 287px;
-    width: 287px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: auto;
-    gap: 20px;
-
-    div {
-      background-color: white;
-      height: 133.5px;
-      width: 133.5px;
-      border-radius: 10px;
-      transition: background-color 0.4s ease-in-out;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      a {
-        height: 100%;
-        width: 100%;
-        text-decoration: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      svg {
-        color: $dark-blue;
-        height: 90px;
-        width: 90px;
-        transition: color 0.4s ease-in-out;
-      }
-    }
-
-    div:hover {
-      cursor: pointer;
-      background-color: $dark-blue;
-      transition: background-color 0.4s ease-in-out;
-
-      svg {
-        color: $light-blue;
-        transition: color 0.4s ease-in-out;
-      }
-    }
-  }
-
-  .appointment {
-    height: 287px;
-    width: 287px;
-    flex-direction: column;
-    align-items: center;
-    gap: 8%;
-
-    p {
-      font-size: 1.25rem;
-    }
-  }
-
-  .manage-stock {
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-
-    p {
-      font-size: 1.25rem;
-    }
-
-    .stock-stats {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px 0;
-    }
-
-    .display-stock-state {
-      width: 50%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 10px;
-
-      div {
-        width: max-content;
-        background-color: $light-grey;
-        padding: 10px 20px;
-        border-radius: 10px;
-
-        p {
-          font-size: 1.5rem;
-        }
-      }
-    }
-  }
-
-  .booked {
-    flex-grow: 1;
-    overflow-y: auto;
-    flex-direction: column;
-    gap: 20px;
-
-    h2 {
-      text-align: center;
-    }
-
-    table {
-      th {
-        font-size: 1.5rem;
-        font-family: Inter, sans-serif;
-        font-weight: normal;
-      }
-
-      th, td {
-        padding: 0 30px;
-        text-align: center;
-      }
-
-      th:last-child, td:last-child {
-        width: 28%;
-        padding-right: 10px;
-      }
-
-      td:first-child {
-        text-align: left;
-      }
-
-      th:first-child, td:first-child {
-        padding-left: 10px;
-      }
-
-      td {
-        font-size: 1rem;
-        font-family: Inter, sans-serif;
-        font-weight: normal;
-
-        span {
-          display: flex;
-          gap: 10px;
-          width: max-content;
-        }
-
-        .res-ready, .res-pending, .res-todo {
-          height: 17px;
-          width: 17px;
-          border-radius: 50%;
-        }
-
-        .res-ready {
-          background-color: #98EB8A;
-        }
-
-        .res-pending {
-          background-color: #FFB951;
-        }
-
-        .res-todo {
-          background-color: #FF2222;
-        }
-      }
-    }
-  }
-
-  .search-section {
-    .input-container {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(3, 1fr);
-      align-items: center;
-    }
-
-    .search-field {
-      display: flex;
-      height: 44px;
-
-      label {
-        text-transform: uppercase;
-        height: 100%;
-        background-color: $light-grey;
-        display: flex;
-        align-items: center;
-        padding: 0 15px;
-        border-radius: 10px 0 0 10px;
-      }
-
-      input {
-        text-transform: uppercase;
-        outline: none;
-        border: none;
-        padding: 0 15px;
-        font-size: 1rem;
-        border-radius: 0 10px 10px 0;
-      }
-    }
-  }
-
-  .search-result {
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
-
-    table {
-      th, td {
-        padding: 0 20px;
-      }
-    }
-
-    .error {
-      text-align: center;
-    }
-
-    .search-error {
-      color: #ff0000;
-    }
-  }
-}
-
-@media all and (min-width: 1100px) {
-  header {
-    height: 100vh;
-    width: 19.583333333333333333333333333333%;
-    display: block;
-    .user-info {
-      height: max-content;
-      padding: 0 20px;
-      margin-top: $viewport-top-margin;
-      .mobile-user-bg {
-        padding: 0;
-        height: 100%;
-        display: block;
-        align-items: normal;
-        background-color: inherit;
-        border-radius: 0;
-        width: auto;
-      }
-      svg {
-        height: 99px;
-        width: 99px;
-        color: white;
-      }
-      .display-user {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        div {
-          display: flex;
-          flex-direction: column;
-          gap: 15px;
-          h2 {
-            letter-spacing: 1px;
-            color: white;
-            margin: -7px 0;
-          }
-          .retail-location {
-            flex-direction: row;
-            position: relative;
-            p {
-              color: white;
-            }
-            button {
-              display: flex;
-              align-items: center;
-              gap: 15px;
-              padding: 0;
-              margin: 0;
-              background-color: transparent;
-              border: none;
-              svg {
-                cursor: pointer;
-                height: 12px;
-                width: 12px;
-              }
-            }
-            ul {
-              top: 20px;
-              left: -10px;
-              position: absolute;
-              margin: 0;
-              padding: 0;
-              list-style-type: none;
-              background-color: $pd-blue;
-              display: flex;
-              flex-direction: column;
-              justify-content: space-around;
-              li {
-                height: 30px;
-                width: 100%;
-                display: flex;
-                align-items: center;
-                p {
-                  height: 100%;
-                  width: 100%;
-                  padding: 5px 10px;
-                }
-              }
-              .active-option {
-                background-color: #FF8811;
-              }
-            }
-          }
-        }
-        .settings {
-          flex-direction: row;
-          gap: 20px;
-          svg {
-            cursor: pointer;
-            height: 19px;
-            width: 19px;
-            color: $orange;
-          }
-        }
-      }
-    }
-    nav {
-      margin-top: 86px;
-      width: auto;
-      ul {
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
-        align-items: initial;
-        justify-items: initial;
-        h3 {
-          display: block;
-        }
-        .menu-selected {
-          background-color: $light-blue;
-          svg {
-            color: $dark-blue;
-          }
-          h3 {
-            color: $dark-blue;
-          }
-        }
-        a:not(.menu-selected):hover {
-          svg {
-            transition: color 0.2s ease-in-out;
-            color: $light-blue;
-          }
-          h3 {
-            color: $light-blue;
-            transition: color 0.2s ease-in-out;
-          }
-        }
-        a {
-          cursor: pointer;
-          display: flex;
-          align-items: center;
-          justify-content: initial;
-          gap: 20px;
-          height: 50px;
-          width: 100%;
-          padding-left: 25%;
-          svg {
-            transition: color 0.2s ease-in-out;
-            color: white;
-            height: 20px;
-            width: 20px;
-          }
-          h3 {
-            transition: color 0.2s ease-in-out;
-            color: white;
-            font-weight: normal;
-            font-family: Inter, sans-serif;
-            font-size: 1.25rem;
-            margin: 0;
-            padding: 0;
-          }
-        }
-      }
-    }
-  }
-}
+//using 7-1 pattern
+@import "abstracts/variables";
+
+@import "base/reset";
+@import "base/typography";
+
+@import "components/loader";
+
+@import "layout/general";
+@import "layout/navbar";
+@import "layout/workshop";
+@import "layout/dashboard";
+@import "layout/tables";
+@import "layout/search";
