--- a/app/src/assets/css/index.scss
+++ b/app/src/assets/css/index.scss
@@ -5,6 +5,7 @@
 @import "base/typography";
 
 @import "components/loader";
+@import "components/modal";
 
 @import "layout/general";
 @import "layout/navbar";
