--- a/app/src/assets/css/index.css
+++ b/app/src/assets/css/index.css
@@ -89,6 +89,65 @@ code {
     transform: translate(24px, 0);
   }
 }
+.modal {
+  display: block; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-content .search-field {
+  display: flex;
+  height: 30px;
+}
+.modal-content .search-field label {
+  text-transform: uppercase;
+  height: 100%;
+  background-color: #F0F3F5;
+  display: flex;
+  align-items: center;
+  padding: 0 15px;
+  border-radius: 10px 0 0 10px;
+}
+.modal-content .search-field input {
+  text-transform: uppercase;
+  outline: none;
+  border: none;
+  padding: 0 15px;
+  font-size: 1rem;
+  border-radius: 0 10px 10px 0;
+}
+
 body {
   background-color: #F0F3F5;
   height: 100vh;
